--- a/wp7-donor/Donor/HelpPage.xaml
+++ b/wp7-donor/Donor/HelpPage.xaml
@@ -33,7 +33,7 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
             <!--Panorama item one-->
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
-            		<TextBlock Text="Задать вопрос" 
+            		<TextBlock Text="задать вопрос" 
 					FontSize="49" 
 					Foreground="White"
 					Margin="-20,30,0,0"
@@ -74,7 +74,7 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
             <!--Panorama item two-->
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
-            		<TextBlock Text="Рекомендации" 
+            		<TextBlock Text="рекомендации" 
 					FontSize="49" 
 					Foreground="White"
 					Margin="-20,30,0,0"
@@ -87,35 +87,32 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
 
                                 <TextBlock 
 								Text="Перед сдачей крови" 
-								Style="{StaticResource Text36pxC0A89A}"/>
+								Style="{StaticResource Text36pxC0A89A}" Margin="0,0,0,10" />
                                 <msp:HTMLViewer 
 								Foreground="#FF847168"
 								FontSize="24"
 								ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                    &lt;ul&gt;
-                                    &lt;li&gt;Не приходите сдавать кровь, если вы чувствуете недомогание (озноб, головокружение, головную боль, слабость).&lt;/li&gt;
-                                    &lt;li&gt;Не курите за час до донации.&lt;/li&gt;
-                                    &lt;li&gt;Не принимайте алкоголь за 48 часов до донации.&lt;/li&gt;
-                                    &lt;li&gt;Обязательно выспитесь и съешьте легкий завтрак (сладкий чай, сухое печенье, каша на воде).&lt;/li&gt;
-                                    &lt;li&gt;Старайтесь ограничить прием жирной и жареной пищи накануне сдачи крови.&lt;/li&gt;
-                                    &lt;li&gt;За три дня до донации откажитесь от приема анальгетиков и аспирина, а также содержащих их лекарств (эти вещества ухудшают свертываемость крови).&lt;/li&gt;
-                                    &lt;li&gt;Во время осмотра врачом перед донацией откровенно отвечайте на его вопросы и не скрывайте информацию о принятых лекарствах и перенесенных заболеваниях.&lt;/li&gt;
-                                &lt;/ul&gt;
+                                    • Не приходите сдавать кровь, если вы чувствуете недомогание (озноб, головокружение, головную боль, слабость).&lt;br/&gt;
+                                    • Не курите за час до донации.&lt;br/&gt;
+                                    • Не принимайте алкоголь за 48 часов до донации.&lt;br/&gt;
+                                    • Обязательно выспитесь и съешьте легкий завтрак (сладкий чай, сухое печенье, каша на воде).&lt;br/&gt;
+                                    • Старайтесь ограничить прием жирной и жареной пищи накануне сдачи крови.&lt;br/&gt;
+                                    • За три дня до донации откажитесь от приема анальгетиков и аспирина, а также содержащих их лекарств (эти вещества ухудшают свертываемость крови).&lt;br/&gt;
+                                    • Во время осмотра врачом перед донацией откровенно отвечайте на его вопросы и не скрывайте информацию о принятых лекарствах и перенесенных заболеваниях.&lt;br/&gt;
                                 </msp:HTMLViewer>
 
-                                <TextBlock Text="После сдачи крови" 
+                                <TextBlock Text="После сдачи крови" Margin="0,0,0,10"
 								Style="{StaticResource Text36pxC0A89A}"/>
                                 
 <msp:HTMLViewer
 Foreground="#FF847168"
 FontSize="24"
 ScrollViewer.VerticalScrollBarVisibility="Disabled">
-&lt;ul&gt;
-&lt;li&gt;10–15 минут посидите спокойно и, если вы хорошо себя чувствуете (не испытываете слабости или головокружения), пройдите в буфет и выпейте сладкий чай.&lt;/li&gt;
-&lt;li&gt;Если вы почувствовали головокружение, обратитесь к медперсоналу. Самый простой способ помочь себе – лечь и поднять ноги выше головы или сесть и опустить голову между колен. Ни в коем случае не пытайтесь идти или вести машину, если у вас кружится голова!&lt;/li&gt;
-&lt;li&gt;В течение 3–4 часов не снимайте повязку и старайтесь ее не мочить. Это убережет вас от возникновения синяка (если синяк появился, на ночь сделайте повязку с гепариновой мазью и/или троксевазином).&lt;/li&gt;                          &lt;li&gt;Избегайте в этот день тяжелых физических и спортивных нагрузок, подъема тяжестей, в том числе и сумок с покупками.&lt;/li&gt;
-&lt;li&gt;Полноценно и регулярно питайтесь в течение 2 суток после донации и выпивайте не менее 2 литров жидкости в день: соки, воду, некрепкий чай (алкоголь не рекомендуется).&lt;/li&gt;
-&lt;/ul&gt;
+• 10–15 минут посидите спокойно и, если вы хорошо себя чувствуете (не испытываете слабости или головокружения), пройдите в буфет и выпейте сладкий чай.&lt;br/&gt;
+• Если вы почувствовали головокружение, обратитесь к медперсоналу. Самый простой способ помочь себе – лечь и поднять ноги выше головы или сесть и опустить голову между колен. Ни в коем случае не пытайтесь идти или вести машину, если у вас кружится голова!&lt;br/&gt;
+• В течение 3–4 часов не снимайте повязку и старайтесь ее не мочить. Это убережет вас от возникновения синяка (если синяк появился, на ночь сделайте повязку с гепариновой мазью и/или троксевазином).&lt;br/&gt;                          
+• Избегайте в этот день тяжелых физических и спортивных нагрузок, подъема тяжестей, в том числе и сумок с покупками.&lt;br/&gt;
+• Полноценно и регулярно питайтесь в течение 2 суток после донации и выпивайте не менее 2 литров жидкости в день: соки, воду, некрепкий чай (алкоголь не рекомендуется).&lt;br/&gt;
                                 </msp:HTMLViewer>
                             </StackPanel>
                         </ScrollViewer>
@@ -125,7 +122,7 @@ ScrollViewer.VerticalScrollBarVisibility="Disabled">
 
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
-            		<TextBlock Text="Противопоказания" 
+            		<TextBlock Text="противопоказания" 
 					FontSize="49" 
 					Foreground="White"
 					Margin="-20,30,0,0"
@@ -199,7 +196,7 @@ Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">     
 
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
-            		<TextBlock Text="Памятка" 
+            		<TextBlock Text="памятка" 
 					FontSize="49" 
 					Foreground="White"
 					Margin="0,30,0,0"
@@ -214,22 +211,23 @@ Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">     
 &lt;li&gt;В течение 3–4 часов не снимайте повязку и старайтесь ее не мочить. Это убережет вас от возникновения синяка (если синяк появился, на ночь сделайте повязку с гепариновой мазью и/или троксевазином).&lt;/li&gt;                          &lt;li&gt;Избегайте в этот день тяжелых физических и спортивных нагрузок, подъема тяжестей, в том числе и сумок с покупками.&lt;/li&gt;
 &lt;li&gt;Полноценно и регулярно питайтесь в течение 2 суток после донации и выпивайте не менее 2 литров жидкости в день: соки, воду, некрепкий чай (алкоголь не рекомендуется).&lt;/li&gt;
 &lt;/ul&gt;-->
+                            <TextBlock 
+								Text="Вы можете сдать кровь, если вы:" TextWrapping="Wrap"
+								Style="{StaticResource Text36pxC0A89A}"/>
+
                             <msp:HTMLViewer 
 							Foreground="#FF847168"
 							FontSize="24"
 							ScrollViewer.VerticalScrollBarVisibility="Disabled">
-&lt;p&gt;Вы&amp;nbsp;можете сдать кровь, если вы:&lt;/p&gt;
 
-&lt;p&gt;
-&lt;ul&gt;
-&lt;li&gt;не&amp;nbsp;употребляли алкоголь за&amp;nbsp;последние 48 часов;&lt;/li&gt;
-&lt;li&gt;не&amp;nbsp;принимали анальгетики за&amp;nbsp;последние 72 часа;&lt;/li&gt;
-&lt;li&gt;для женщин: после окончания менструации прошло 5 дней;&lt;/li&gt;
-&lt;li&gt;вам не&amp;nbsp;удаляли зуб за&amp;nbsp;последние 10 дней;&lt;/li&gt;
-&lt;li&gt;не&amp;nbsp;принимали антибиотики за&amp;nbsp;последние 2 недели;&lt;/li&gt;
-&lt;li&gt;не&amp;nbsp;болели ангиной, гриппом, ОРВИ за&amp;nbsp;последний месяц;&lt;/li&gt;
-&lt;li&gt;у&amp;nbsp;вас не&amp;nbsp;было обострения аллергии за&amp;nbsp;последние 2&amp;nbsp;месяца.&lt;/li&gt;
-&lt;/ul&gt;&lt;/p&gt;
+• не&amp;nbsp;употребляли алкоголь за&amp;nbsp;последние 48 часов;&lt;br/&gt;
+• не&amp;nbsp;принимали анальгетики за&amp;nbsp;последние 72 часа;&lt;br/&gt;
+• для женщин: после окончания менструации прошло 5 дней;&lt;br/&gt;
+• вам не&amp;nbsp;удаляли зуб за&amp;nbsp;последние 10 дней;&lt;br/&gt;
+• не&amp;nbsp;принимали антибиотики за&amp;nbsp;последние 2 недели;&lt;br/&gt;
+• не&amp;nbsp;болели ангиной, гриппом, ОРВИ за&amp;nbsp;последний месяц;&lt;br/&gt;
+• у&amp;nbsp;вас не&amp;nbsp;было обострения аллергии за&amp;nbsp;последние 2&amp;nbsp;месяца.&lt;/li&gt;
+&lt;br/&gt;
                             </msp:HTMLViewer>
                         </StackPanel>
                     </ScrollViewer>
