--- a/wp7-donor/Donor/AdsPage.xaml
+++ b/wp7-donor/Donor/AdsPage.xaml
@@ -12,6 +12,7 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480"
     xmlns:msp="clr-namespace:MSPToolkit.Controls;assembly=MSPToolkit"
+    xmlns:my="clr-namespace:MyToolkit.Controls;assembly=MyToolkit.Extended"
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
 	
 	<phone:PhoneApplicationPage.ApplicationBar>
@@ -54,6 +55,11 @@
                         HorizontalContentAlignment="Left"
                         ScrollViewer.VerticalScrollBarVisibility="Disabled" 
                         Foreground="#FF847168" Html="{Binding Path=Body}" />
+
+                        <!--<my:FixedHtmlTextBlock 
+                        x:Name="Description" FontSize="24" 
+                        HorizontalContentAlignment="Left"
+                        Foreground="#FF847168" Html="{Binding Path=Body}" /> -->
                 </StackPanel>
             </ScrollViewer>
         </Grid>
