--- a/wp7-donor/Donor/Controls/DayInCalendarControl.xaml
+++ b/wp7-donor/Donor/Controls/DayInCalendarControl.xaml
@@ -42,7 +42,7 @@
 
                     <Grid Width="52" Background="Transparent" Height="52" Grid.Row="0" Grid.Column="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
@@ -62,13 +62,13 @@
                         </StackPanel>
                         <Image Margin="0"
                        Name="DayImageRB"
-                               VerticalAlignment="Bottom" 
+                               VerticalAlignment="Bottom" Height="20"
                                HorizontalAlignment="Right"
                            Grid.Row="2"
                            Grid.Column="2"/>
                         <Image Margin="0"
                        Name="DayImageLB" 
-                           Grid.Row="2"
+                           Grid.Row="2" Height="20"
                            Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
                         <!-- {Binding ImagePath} -->
                 </Grid>
