--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -20,10 +20,10 @@
     shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot contains the root grid where all other page content is placed-->
-    <Grid x:Name="LayoutRoot">
-    	<Grid.Background>
+    <Grid x:Name="LayoutRoot" Background="#FF271B16">
+    	<!--<Grid.Background>
             <ImageBrush ImageSource="images/bg_04.png"/>
-        </Grid.Background>
+        </Grid.Background>-->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -33,7 +33,7 @@
             <Controls:ProgressOverlay.Content>
                 <StackPanel>
                     <TextBlock Foreground="#FFFFFFFF" VerticalAlignment="Center" HorizontalAlignment="Center">Загрузка...</TextBlock>
-                    <toolkit:PerformanceProgressBar Name="Loading" IsIndeterminate="True" Height="10" Background="#FFA3CE57" Visibility="Collapsed" />
+                    <toolkit:PerformanceProgressBar Name="Loading" IsIndeterminate="True" Height="10" Background="#FFA3CE57" Foreground="#FFE22A1B" />
                 </StackPanel>
             </Controls:ProgressOverlay.Content>
         </Controls:ProgressOverlay>
@@ -59,7 +59,7 @@
             	<controls:PanoramaItem.Header>
                     <TextBlock 
                         Style="{StaticResource Text70pxWhite}" 
-					Text="Основное" Margin="0,30,0,0"/>
+					Text="основное" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid Margin="0,10,0,0">
                     <StackPanel>
@@ -80,16 +80,16 @@
                         <TextBlock TextWrapping="Wrap" 
                         Text="{Binding Adress}"	Style="{StaticResource Text24pxDF8D4B}"/>
                         <TextBlock TextWrapping="Wrap" 	Text="Телефон" 
-                        Style="{StaticResource Text36pxB9A194}"/>
+                        Style="{StaticResource Text36pxB9A194}" Margin="0,10,0,0"/>
                         
                         <TextBlock TextWrapping="Wrap" 
 						Text="{Binding Phone}"
 						Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock 
-						Style="{StaticResource Text36pxB9A194}" 
+                        <TextBlock  Margin="0,10,0,0"
+						Style="{StaticResource Text24pxDF8D4B}" 
 						Text="{Binding RegionalRegistrationString}" 
 						TextWrapping="Wrap"/>
-                        <TextBlock Text="Сайт" 
+                        <TextBlock Text="Сайт"  Margin="0,10,0,0"
 						Style="{StaticResource Text36pxB9A194}" 
 						TextWrapping="Wrap"/>
                         <TextBlock TextWrapping="Wrap" 
@@ -103,22 +103,22 @@
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="Для доноров" Margin="-10,30,0,0"/>
+					Text="для доноров" Margin="-10,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <StackPanel>
                         <TextBlock TextWrapping="Wrap" 
-						Text="Время приема" 
+						Text="Время приема"  Margin="0,10,0,0"
 						Style="{StaticResource Text36pxB9A194}" />
                         <TextBlock TextWrapping="Wrap" Style="{StaticResource Text24pxDF8D4B}" Text="{Binding ReceiptTime}"/>
                         <TextBlock TextWrapping="Wrap" 
-						Text="Проезд" Style="{StaticResource Text36pxB9A194}"/>
+						Text="Проезд" Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
                         <TextBlock TextWrapping="Wrap" 
 						Text="{Binding Transportaion}" 
 						Style="{StaticResource Text24pxDF8D4B}"/>
                         <StackPanel Name="BloodFor">
                         <TextBlock TextWrapping="Wrap" 
-						Text="Кровь сдается для" Style="{StaticResource Text36pxB9A194}"/>
+						Text="Кровь сдается для"  Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
                             <TextBlock Text="{Binding BloodFor}" TextWrapping="Wrap"  Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                     </StackPanel>
@@ -128,7 +128,7 @@
             <controls:PanoramaItem Name="PanaramaAdsItem">
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="Объявления" Margin="0,30,0,0"/>
+					Text="объявления" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <ListBox Margin="0,0,0,0" ItemsSource="{Binding Ads.Items}" Name="StationAds" SelectionChanged="ListBox_SelectionChanged">
@@ -150,7 +150,7 @@
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="Отзывы" Margin="0,30,0,0"/>
+					Text="отзывы" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <ScrollViewer>
@@ -159,7 +159,7 @@
                             ItemsSource="{Binding Reviews.Items}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <StackPanel Margin="0,10,0,0">
+                                    <StackPanel Margin="0,10">
 
 <TextBlock Text="{Binding ShortDateText}" 
 Style="{StaticResource Text36pxB9A194}" />
