--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -63,6 +63,11 @@
         <Grid x:Name="ContentPanel" 
 		Background="#FFEEEEEE"
 		Grid.Row="1" Margin="0,0,0,0">
+
+            <TextBlock Text="Станций не найдено. Измените параметры фильтра." 
+                       Foreground="#FF847168" Name="Noresults" TextWrapping="Wrap"
+                       Margin="10,5,10,0" Visibility="Collapsed"/>
+            
         <ListBox 
 		VerticalAlignment="Top"
 		Margin="0,0,0,0"
