--- a/wp7-donor/Donor/EventPage.xaml
+++ b/wp7-donor/Donor/EventPage.xaml
@@ -84,7 +84,8 @@
                     <StackPanel Name="ReminderStackPanel">
 					<StackPanel Orientation="Horizontal" Margin="0,10,0,0"
 					>
-                    <TextBlock Text="Напоминание:" 
+                    <TextBlock Text="Напоминание за:" 
+                    Foreground="#FFDF8D4B"
 					Style="{StaticResource Text36pxB9A194}"
 					TextWrapping="Wrap"/>
                     
@@ -121,7 +122,7 @@
 					Name="Finished" TextWrapping="Wrap"/>
 					
 					<StackPanel Orientation="Horizontal" Margin="0,20,0,15">
-                    <TextBlock Text="Комментарии:" 
+                    <TextBlock Text="Комментарий:" 
 					Style="{StaticResource Text36pxB9A194}"
 					TextWrapping="Wrap"/>
                     <Image Height="50" 
