--- a/wp7-donor/Donor/Controls/DayInCalendarControl.xaml
+++ b/wp7-donor/Donor/Controls/DayInCalendarControl.xaml
@@ -61,7 +61,7 @@
                     </Grid.ColumnDefinitions>
 
                         <Image Margin="0,0,0,4"
-                       Name="DayImageRB" Visibility="Collapsed"
+                       Name="DayImageRB"
                                VerticalAlignment="Bottom" Height="18"
                                HorizontalAlignment="Right"
                            Grid.Row="2"
